--- a/digi-app/frontend/digitalised/index.html
+++ b/digi-app/frontend/digitalised/index.html
@@ -1,20 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Create User</title>
-  </head>
-  <body>
-
-    <form id="userForm">
-      <input type ="text", id="username", placeholder="Enter Username" required/>
-      <input type ="text", id="name", placeholder="Enter Name" required/>
-      <input type ="text", id="email", placeholder="Enter Email" required/>
-      <input type ="text", id="password", placeholder="Enter Password" required/>
-      <button type="submit">Create User</button>
-    </form>
-
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Digitalised</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
